// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Result Tabview Tests Rendering Only Output 1`] = `
<ResultTabView
  contextId="ec123"
  hideSingleTab={false}
  resultSets={
    {
      "output": [
        {
          "content": "Message 1",
          "type": 0,
        },
        {
          "content": "Message 2",
          "type": 4,
        },
      ],
      "sets": [],
      "type": "resultSets",
    }
  }
>
  <Container
    className="msg resultHost"
    orientation="column"
  >
    <div
      className="msg container fixedScrollbar resultHost"
      style={
        {
          "alignItems": undefined,
          "flexDirection": "column",
          "flexWrap": undefined,
          "justifyContent": undefined,
        }
      }
    >
      <Tabview
        className="resultTabview"
        hideSingleTab={false}
        onSelectTab={[Function]}
        pages={
          [
            {
              "caption": "Output",
              "content": <ActionOutput
                contextId="ec123"
                output={
                  [
                    {
                      "content": "Message 1",
                      "type": 0,
                    },
                    {
                      "content": "Message 2",
                      "type": 4,
                    },
                  ]
                }
                showIndexes={true}
              />,
              "id": "output",
            },
          ]
        }
        selectedId="output"
        showTabs={true}
        stretchTabs={false}
        tabPosition="top"
      >
        <Container
          className="msg tabview top resultTabview"
          orientation="column"
          style={
            {
              "--content-separator-width": "0px",
              "--tabItem-border-width": "0px",
            }
          }
        >
          <div
            className="msg container fixedScrollbar tabview top resultTabview"
            style={
              {
                "--content-separator-width": "0px",
                "--tabItem-border-width": "0px",
                "alignItems": undefined,
                "flexDirection": "column",
                "flexWrap": undefined,
                "justifyContent": undefined,
              }
            }
          >
            <Selector
              activeItemId="output"
              className="tabArea"
              entryOrientation="row"
              items={
                [
                  {
                    "auxillary": undefined,
                    "canReorder": undefined,
                    "caption": "Output",
                    "icon": undefined,
                    "id": "output",
                    "tooltip": undefined,
                  },
                ]
              }
              onDrop={[Function]}
              onSelect={[Function]}
              orientation="row"
              smoothScroll={false}
              wrapNavigation={false}
            >
              <Container
                className="msg selector horizontal tabArea"
                innerRef={
                  {
                    "current": <div
                      class="msg container fixedScrollbar selector horizontal tabArea"
                      style="flex-direction: row;"
                    >
                      <div
                        class="msg container fixedScrollbar selectorItem stepDown"
                        id="selectorItemstepDown"
                        style="flex-direction: row; justify-content: center; align-items: center; display: none;"
                      />
                      <div
                        class="msg container fixedScrollbar selectorItem selected normal"
                        id="output"
                        style="flex-direction: row; justify-content: center; align-items: center;"
                      >
                        <label
                          class="msg label"
                          data-tooltip="inherit"
                        >
                          Output
                        </label>
                      </div>
                      <div
                        class="msg container fixedScrollbar selectorItem stepUp"
                        id="selectorItemstepUp"
                        style="flex-direction: row; justify-content: center; align-items: center; display: none;"
                      />
                    </div>,
                  }
                }
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                orientation="row"
              >
                <div
                  className="msg container fixedScrollbar selector horizontal tabArea"
                  onDragEnter={[Function]}
                  onDragLeave={[Function]}
                  onDragOver={[Function]}
                  onDragStart={[Function]}
                  onDrop={[Function]}
                  style={
                    {
                      "alignItems": undefined,
                      "flexDirection": "row",
                      "flexWrap": undefined,
                      "justifyContent": undefined,
                    }
                  }
                >
                  <SelectorItem
                    disabled={false}
                    id="selectorItemstepDown"
                    innerRef={
                      {
                        "current": <div
                          class="msg container fixedScrollbar selectorItem stepDown"
                          id="selectorItemstepDown"
                          style="flex-direction: row; justify-content: center; align-items: center; display: none;"
                        />,
                      }
                    }
                    onClick={[Function]}
                    orientation="row"
                    type="stepDown"
                  >
                    <Container
                      className="msg selectorItem stepDown"
                      crossAlignment="center"
                      id="selectorItemstepDown"
                      innerRef={
                        {
                          "current": <div
                            class="msg container fixedScrollbar selectorItem stepDown"
                            id="selectorItemstepDown"
                            style="flex-direction: row; justify-content: center; align-items: center; display: none;"
                          />,
                        }
                      }
                      mainAlignment="center"
                      onClick={[Function]}
                      orientation="row"
                    >
                      <div
                        className="msg container fixedScrollbar selectorItem stepDown"
                        id="selectorItemstepDown"
                        onClick={[Function]}
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "flexWrap": undefined,
                            "justifyContent": "center",
                          }
                        }
                      />
                    </Container>
                  </SelectorItem>
                  <SelectorItem
                    caption="Output"
                    disabled={false}
                    id="output"
                    innerRef={
                      {
                        "current": <div
                          class="msg container fixedScrollbar selectorItem selected normal"
                          id="output"
                          style="flex-direction: row; justify-content: center; align-items: center;"
                        >
                          <label
                            class="msg label"
                            data-tooltip="inherit"
                          >
                            Output
                          </label>
                        </div>,
                      }
                    }
                    key="output"
                    onClick={[Function]}
                    onDrop={[Function]}
                    orientation="row"
                    selected={true}
                    type="normal"
                  >
                    <Container
                      className="msg selectorItem selected normal"
                      crossAlignment="center"
                      id="output"
                      innerRef={
                        {
                          "current": <div
                            class="msg container fixedScrollbar selectorItem selected normal"
                            id="output"
                            style="flex-direction: row; justify-content: center; align-items: center;"
                          >
                            <label
                              class="msg label"
                              data-tooltip="inherit"
                            >
                              Output
                            </label>
                          </div>,
                        }
                      }
                      mainAlignment="center"
                      onClick={[Function]}
                      onDrop={[Function]}
                      orientation="row"
                    >
                      <div
                        className="msg container fixedScrollbar selectorItem selected normal"
                        id="output"
                        onClick={[Function]}
                        onDrop={[Function]}
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "flexWrap": undefined,
                            "justifyContent": "center",
                          }
                        }
                      >
                        <Label
                          data-tooltip="inherit"
                        >
                          <label
                            className="msg label"
                            data-tooltip="inherit"
                            style={{}}
                          >
                            Output
                          </label>
                        </Label>
                      </div>
                    </Container>
                  </SelectorItem>
                  <SelectorItem
                    disabled={false}
                    id="selectorItemstepUp"
                    innerRef={
                      {
                        "current": <div
                          class="msg container fixedScrollbar selectorItem stepUp"
                          id="selectorItemstepUp"
                          style="flex-direction: row; justify-content: center; align-items: center; display: none;"
                        />,
                      }
                    }
                    onClick={[Function]}
                    orientation="row"
                    type="stepUp"
                  >
                    <Container
                      className="msg selectorItem stepUp"
                      crossAlignment="center"
                      id="selectorItemstepUp"
                      innerRef={
                        {
                          "current": <div
                            class="msg container fixedScrollbar selectorItem stepUp"
                            id="selectorItemstepUp"
                            style="flex-direction: row; justify-content: center; align-items: center; display: none;"
                          />,
                        }
                      }
                      mainAlignment="center"
                      onClick={[Function]}
                      orientation="row"
                    >
                      <div
                        className="msg container fixedScrollbar selectorItem stepUp"
                        id="selectorItemstepUp"
                        onClick={[Function]}
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "flexWrap": undefined,
                            "justifyContent": "center",
                          }
                        }
                      />
                    </Container>
                  </SelectorItem>
                </div>
              </Container>
            </Selector>
            <Container
              className="content"
              innerRef={
                {
                  "current": <div
                    class="msg container fixedScrollbar content"
                    style="flex-direction: column;"
                  >
                    <div
                      class="msg actionOutput"
                      style="display: flex; gap: 2px; flex-direction: column;"
                    >
                      <div
                        style="display: flex; gap: 2px; flex-direction: row;"
                      >
                        <label
                          class="msg resultText error actionLabel"
                          data-tooltip="expand"
                          id=""
                          style="grid-column: span 2;"
                        >
                          <span
                            class=""
                          >
                            Message 1
                          </span>
                        </label>
                      </div>
                      <div
                        style="display: flex; gap: 2px; flex-direction: row;"
                      >
                        <label
                          class="msg resultText response actionLabel"
                          data-tooltip="expand"
                          id=""
                          style="grid-column: span 2;"
                        >
                          <span
                            class=""
                          >
                            Message 2
                          </span>
                        </label>
                      </div>
                    </div>
                  </div>,
                }
              }
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDrop={[Function]}
              orientation="column"
            >
              <div
                className="msg container fixedScrollbar content"
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDrop={[Function]}
                style={
                  {
                    "alignItems": undefined,
                    "flexDirection": "column",
                    "flexWrap": undefined,
                    "justifyContent": undefined,
                  }
                }
              >
                <ActionOutput
                  contextId="ec123"
                  output={
                    [
                      {
                        "content": "Message 1",
                        "type": 0,
                      },
                      {
                        "content": "Message 2",
                        "type": 4,
                      },
                    ]
                  }
                  showIndexes={true}
                >
                  <div
                    className="msg actionOutput"
                    style={
                      {
                        "display": "flex",
                        "flexDirection": "column",
                        "gap": "2px",
                      }
                    }
                  >
                    <div
                      style={
                        {
                          "display": "flex",
                          "flexDirection": "row",
                          "gap": "2px",
                        }
                      }
                    >
                      <Label
                        caption="Message 1"
                        className="actionLabel"
                        language="ansi"
                        onClick={[Function]}
                        style={
                          {
                            "gridColumn": "span 2",
                          }
                        }
                        tabIndex={-1}
                        type={0}
                      >
                        <label
                          className="msg resultText error actionLabel"
                          data-tooltip="expand"
                          style={
                            {
                              "gridColumn": "span 2",
                            }
                          }
                        >
                          <span
                            className=""
                            style={
                              {
                                "backgroundColor": undefined,
                                "color": undefined,
                              }
                            }
                          >
                            Message 1
                          </span>
                        </label>
                      </Label>
                    </div>
                    <div
                      style={
                        {
                          "display": "flex",
                          "flexDirection": "row",
                          "gap": "2px",
                        }
                      }
                    >
                      <Label
                        caption="Message 2"
                        className="actionLabel"
                        language="ansi"
                        onClick={[Function]}
                        style={
                          {
                            "gridColumn": "span 2",
                          }
                        }
                        tabIndex={-1}
                        type={4}
                      >
                        <label
                          className="msg resultText response actionLabel"
                          data-tooltip="expand"
                          style={
                            {
                              "gridColumn": "span 2",
                            }
                          }
                        >
                          <span
                            className=""
                            style={
                              {
                                "backgroundColor": undefined,
                                "color": undefined,
                              }
                            }
                          >
                            Message 2
                          </span>
                        </label>
                      </Label>
                    </div>
                  </div>
                </ActionOutput>
              </div>
            </Container>
          </div>
        </Container>
      </Tabview>
      <Menu
        id="actionMenu"
        onItemClick={[Function]}
        orientation="column"
        placement="bottom-start"
      >
        <Popup
          className="msg menu"
          id="actionMenu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="bottom-start"
          showArrow={false}
        >
          <Portal
            id="actionMenu"
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </div>
  </Container>
</ResultTabView>
`;

exports[`Result Tabview Tests Standard Rendering 1`] = `
<ResultTabView
  contextId="ec123"
  hideSingleTab={true}
  resultSets={
    {
      "sets": [],
      "type": "resultSets",
    }
  }
>
  <Container
    className="msg resultHost"
    orientation="column"
  >
    <div
      className="msg container fixedScrollbar resultHost"
      style={
        {
          "alignItems": undefined,
          "flexDirection": "column",
          "flexWrap": undefined,
          "justifyContent": undefined,
        }
      }
    >
      <Tabview
        className="resultTabview"
        hideSingleTab={true}
        onSelectTab={[Function]}
        pages={[]}
        selectedId="output"
        showTabs={true}
        stretchTabs={false}
        tabPosition="top"
      >
        <Container
          className="msg tabview top resultTabview"
          orientation="column"
          style={
            {
              "--content-separator-width": "0px",
              "--tabItem-border-width": "0px",
            }
          }
        >
          <div
            className="msg container fixedScrollbar tabview top resultTabview"
            style={
              {
                "--content-separator-width": "0px",
                "--tabItem-border-width": "0px",
                "alignItems": undefined,
                "flexDirection": "column",
                "flexWrap": undefined,
                "justifyContent": undefined,
              }
            }
          >
            <Container
              className="content"
              innerRef={
                {
                  "current": <div
                    class="msg container fixedScrollbar content"
                    style="flex-direction: column;"
                  />,
                }
              }
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDrop={[Function]}
              orientation="column"
            >
              <div
                className="msg container fixedScrollbar content"
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDrop={[Function]}
                style={
                  {
                    "alignItems": undefined,
                    "flexDirection": "column",
                    "flexWrap": undefined,
                    "justifyContent": undefined,
                  }
                }
              />
            </Container>
          </div>
        </Container>
      </Tabview>
      <Menu
        id="actionMenu"
        onItemClick={[Function]}
        orientation="column"
        placement="bottom-start"
      >
        <Popup
          className="msg menu"
          id="actionMenu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="bottom-start"
          showArrow={false}
        >
          <Portal
            id="actionMenu"
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </div>
  </Container>
</ResultTabView>
`;

exports[`Result Tabview Tests Tabview With Result Sets 1`] = `
<ResultTabView
  contextId="ec123"
  hideSingleTab={true}
  resultSets={
    {
      "output": [
        {
          "content": "Lorem ipsum dolor sit amet",
          "language": "ini",
          "type": 2,
        },
      ],
      "sets": [
        {
          "columns": [],
          "data": {
            "currentPage": 0,
            "executionInfo": {
              "text": "All fine",
              "type": 4,
            },
            "rows": [],
          },
          "resultId": "123",
          "sql": "select 1",
          "type": "resultSet",
        },
        {
          "columns": [],
          "data": {
            "currentPage": 10,
            "rows": [],
          },
          "resultId": "456",
          "sql": "select 2",
          "type": "resultSet",
        },
      ],
      "type": "resultSets",
    }
  }
>
  <Container
    className="msg resultHost"
    orientation="column"
  >
    <div
      className="msg container fixedScrollbar resultHost"
      style={
        {
          "alignItems": undefined,
          "flexDirection": "column",
          "flexWrap": undefined,
          "justifyContent": undefined,
        }
      }
    >
      <Tabview
        className="resultTabview"
        hideSingleTab={true}
        onSelectTab={[Function]}
        pages={
          [
            {
              "caption": "Output",
              "content": <ActionOutput
                contextId="ec123"
                output={
                  [
                    {
                      "content": "Lorem ipsum dolor sit amet",
                      "language": "ini",
                      "type": 2,
                    },
                  ]
                }
                showIndexes={true}
              />,
              "id": "output",
            },
            {
              "caption": "Result #1",
              "content": <ResultView
                onEdit={[Function]}
                resultSet={
                  {
                    "columns": [],
                    "data": {
                      "currentPage": 0,
                      "executionInfo": {
                        "text": "All fine",
                        "type": 4,
                      },
                      "rows": [],
                    },
                    "resultId": "123",
                    "sql": "select 1",
                    "type": "resultSet",
                  }
                }
              />,
              "id": "123",
            },
            {
              "caption": "Result #2",
              "content": <ResultView
                onEdit={[Function]}
                resultSet={
                  {
                    "columns": [],
                    "data": {
                      "currentPage": 10,
                      "rows": [],
                    },
                    "resultId": "456",
                    "sql": "select 2",
                    "type": "resultSet",
                  }
                }
              />,
              "id": "456",
            },
          ]
        }
        selectedId="123"
        showTabs={true}
        stretchTabs={false}
        tabPosition="top"
      >
        <Container
          className="msg tabview top resultTabview"
          orientation="column"
          style={
            {
              "--content-separator-width": "0px",
              "--tabItem-border-width": "0px",
            }
          }
        >
          <div
            className="msg container fixedScrollbar tabview top resultTabview"
            style={
              {
                "--content-separator-width": "0px",
                "--tabItem-border-width": "0px",
                "alignItems": undefined,
                "flexDirection": "column",
                "flexWrap": undefined,
                "justifyContent": undefined,
              }
            }
          >
            <Selector
              activeItemId="123"
              className="tabArea"
              entryOrientation="row"
              items={
                [
                  {
                    "auxillary": undefined,
                    "canReorder": undefined,
                    "caption": "Output",
                    "icon": undefined,
                    "id": "output",
                    "tooltip": undefined,
                  },
                  {
                    "auxillary": undefined,
                    "canReorder": undefined,
                    "caption": "Result #1",
                    "icon": undefined,
                    "id": "123",
                    "tooltip": undefined,
                  },
                  {
                    "auxillary": undefined,
                    "canReorder": undefined,
                    "caption": "Result #2",
                    "icon": undefined,
                    "id": "456",
                    "tooltip": undefined,
                  },
                ]
              }
              onDrop={[Function]}
              onSelect={[Function]}
              orientation="row"
              smoothScroll={false}
              wrapNavigation={false}
            >
              <Container
                className="msg selector horizontal tabArea"
                innerRef={
                  {
                    "current": <div
                      class="msg container fixedScrollbar selector horizontal tabArea"
                      style="flex-direction: row;"
                    >
                      <div
                        class="msg container fixedScrollbar selectorItem stepDown"
                        id="selectorItemstepDown"
                        style="flex-direction: row; justify-content: center; align-items: center; display: none;"
                      />
                      <div
                        class="msg container fixedScrollbar selectorItem normal"
                        id="output"
                        style="flex-direction: row; justify-content: center; align-items: center;"
                      >
                        <label
                          class="msg label"
                          data-tooltip="inherit"
                        >
                          Output
                        </label>
                      </div>
                      <div
                        class="msg container fixedScrollbar selectorItem selected normal"
                        id="123"
                        style="flex-direction: row; justify-content: center; align-items: center;"
                      >
                        <label
                          class="msg label"
                          data-tooltip="inherit"
                        >
                          Result #1
                        </label>
                      </div>
                      <div
                        class="msg container fixedScrollbar selectorItem normal"
                        id="456"
                        style="flex-direction: row; justify-content: center; align-items: center;"
                      >
                        <label
                          class="msg label"
                          data-tooltip="inherit"
                        >
                          Result #2
                        </label>
                      </div>
                      <div
                        class="msg container fixedScrollbar selectorItem stepUp"
                        id="selectorItemstepUp"
                        style="flex-direction: row; justify-content: center; align-items: center; display: none;"
                      />
                    </div>,
                  }
                }
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                orientation="row"
              >
                <div
                  className="msg container fixedScrollbar selector horizontal tabArea"
                  onDragEnter={[Function]}
                  onDragLeave={[Function]}
                  onDragOver={[Function]}
                  onDragStart={[Function]}
                  onDrop={[Function]}
                  style={
                    {
                      "alignItems": undefined,
                      "flexDirection": "row",
                      "flexWrap": undefined,
                      "justifyContent": undefined,
                    }
                  }
                >
                  <SelectorItem
                    disabled={false}
                    id="selectorItemstepDown"
                    innerRef={
                      {
                        "current": <div
                          class="msg container fixedScrollbar selectorItem stepDown"
                          id="selectorItemstepDown"
                          style="flex-direction: row; justify-content: center; align-items: center; display: none;"
                        />,
                      }
                    }
                    onClick={[Function]}
                    orientation="row"
                    type="stepDown"
                  >
                    <Container
                      className="msg selectorItem stepDown"
                      crossAlignment="center"
                      id="selectorItemstepDown"
                      innerRef={
                        {
                          "current": <div
                            class="msg container fixedScrollbar selectorItem stepDown"
                            id="selectorItemstepDown"
                            style="flex-direction: row; justify-content: center; align-items: center; display: none;"
                          />,
                        }
                      }
                      mainAlignment="center"
                      onClick={[Function]}
                      orientation="row"
                    >
                      <div
                        className="msg container fixedScrollbar selectorItem stepDown"
                        id="selectorItemstepDown"
                        onClick={[Function]}
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "flexWrap": undefined,
                            "justifyContent": "center",
                          }
                        }
                      />
                    </Container>
                  </SelectorItem>
                  <SelectorItem
                    caption="Output"
                    disabled={false}
                    id="output"
                    key="output"
                    onClick={[Function]}
                    onDrop={[Function]}
                    orientation="row"
                    selected={false}
                    type="normal"
                  >
                    <Container
                      className="msg selectorItem normal"
                      crossAlignment="center"
                      id="output"
                      mainAlignment="center"
                      onClick={[Function]}
                      onDrop={[Function]}
                      orientation="row"
                    >
                      <div
                        className="msg container fixedScrollbar selectorItem normal"
                        id="output"
                        onClick={[Function]}
                        onDrop={[Function]}
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "flexWrap": undefined,
                            "justifyContent": "center",
                          }
                        }
                      >
                        <Label
                          data-tooltip="inherit"
                        >
                          <label
                            className="msg label"
                            data-tooltip="inherit"
                            style={{}}
                          >
                            Output
                          </label>
                        </Label>
                      </div>
                    </Container>
                  </SelectorItem>
                  <SelectorItem
                    caption="Result #1"
                    disabled={false}
                    id="123"
                    innerRef={
                      {
                        "current": <div
                          class="msg container fixedScrollbar selectorItem selected normal"
                          id="123"
                          style="flex-direction: row; justify-content: center; align-items: center;"
                        >
                          <label
                            class="msg label"
                            data-tooltip="inherit"
                          >
                            Result #1
                          </label>
                        </div>,
                      }
                    }
                    key="123"
                    onClick={[Function]}
                    onDrop={[Function]}
                    orientation="row"
                    selected={true}
                    type="normal"
                  >
                    <Container
                      className="msg selectorItem selected normal"
                      crossAlignment="center"
                      id="123"
                      innerRef={
                        {
                          "current": <div
                            class="msg container fixedScrollbar selectorItem selected normal"
                            id="123"
                            style="flex-direction: row; justify-content: center; align-items: center;"
                          >
                            <label
                              class="msg label"
                              data-tooltip="inherit"
                            >
                              Result #1
                            </label>
                          </div>,
                        }
                      }
                      mainAlignment="center"
                      onClick={[Function]}
                      onDrop={[Function]}
                      orientation="row"
                    >
                      <div
                        className="msg container fixedScrollbar selectorItem selected normal"
                        id="123"
                        onClick={[Function]}
                        onDrop={[Function]}
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "flexWrap": undefined,
                            "justifyContent": "center",
                          }
                        }
                      >
                        <Label
                          data-tooltip="inherit"
                        >
                          <label
                            className="msg label"
                            data-tooltip="inherit"
                            style={{}}
                          >
                            Result #1
                          </label>
                        </Label>
                      </div>
                    </Container>
                  </SelectorItem>
                  <SelectorItem
                    caption="Result #2"
                    disabled={false}
                    id="456"
                    key="456"
                    onClick={[Function]}
                    onDrop={[Function]}
                    orientation="row"
                    selected={false}
                    type="normal"
                  >
                    <Container
                      className="msg selectorItem normal"
                      crossAlignment="center"
                      id="456"
                      mainAlignment="center"
                      onClick={[Function]}
                      onDrop={[Function]}
                      orientation="row"
                    >
                      <div
                        className="msg container fixedScrollbar selectorItem normal"
                        id="456"
                        onClick={[Function]}
                        onDrop={[Function]}
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "flexWrap": undefined,
                            "justifyContent": "center",
                          }
                        }
                      >
                        <Label
                          data-tooltip="inherit"
                        >
                          <label
                            className="msg label"
                            data-tooltip="inherit"
                            style={{}}
                          >
                            Result #2
                          </label>
                        </Label>
                      </div>
                    </Container>
                  </SelectorItem>
                  <SelectorItem
                    disabled={false}
                    id="selectorItemstepUp"
                    innerRef={
                      {
                        "current": <div
                          class="msg container fixedScrollbar selectorItem stepUp"
                          id="selectorItemstepUp"
                          style="flex-direction: row; justify-content: center; align-items: center; display: none;"
                        />,
                      }
                    }
                    onClick={[Function]}
                    orientation="row"
                    type="stepUp"
                  >
                    <Container
                      className="msg selectorItem stepUp"
                      crossAlignment="center"
                      id="selectorItemstepUp"
                      innerRef={
                        {
                          "current": <div
                            class="msg container fixedScrollbar selectorItem stepUp"
                            id="selectorItemstepUp"
                            style="flex-direction: row; justify-content: center; align-items: center; display: none;"
                          />,
                        }
                      }
                      mainAlignment="center"
                      onClick={[Function]}
                      orientation="row"
                    >
                      <div
                        className="msg container fixedScrollbar selectorItem stepUp"
                        id="selectorItemstepUp"
                        onClick={[Function]}
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "flexWrap": undefined,
                            "justifyContent": "center",
                          }
                        }
                      />
                    </Container>
                  </SelectorItem>
                </div>
              </Container>
            </Selector>
            <Container
              className="content"
              innerRef={
                {
                  "current": <div
                    class="msg container fixedScrollbar content"
                    style="flex-direction: column;"
                  >
                    <div
                      class="msg container fixedScrollbar resultView"
                      style="flex-direction: column;"
                    />
                  </div>,
                }
              }
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDrop={[Function]}
              orientation="column"
            >
              <div
                className="msg container fixedScrollbar content"
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDrop={[Function]}
                style={
                  {
                    "alignItems": undefined,
                    "flexDirection": "column",
                    "flexWrap": undefined,
                    "justifyContent": undefined,
                  }
                }
              >
                <ResultView
                  onEdit={[Function]}
                  resultSet={
                    {
                      "columns": [],
                      "data": {
                        "currentPage": 0,
                        "executionInfo": {
                          "text": "All fine",
                          "type": 4,
                        },
                        "rows": [],
                      },
                      "resultId": "123",
                      "sql": "select 1",
                      "type": "resultSet",
                    }
                  }
                >
                  <Container
                    className="msg resultView"
                    orientation="column"
                  >
                    <div
                      className="msg container fixedScrollbar resultView"
                      style={
                        {
                          "alignItems": undefined,
                          "flexDirection": "column",
                          "flexWrap": undefined,
                          "justifyContent": undefined,
                        }
                      }
                    >
                      <Menu
                        id="cellContextMenu"
                        onItemClick={[Function]}
                        orientation="column"
                        placement="bottom-start"
                      >
                        <Popup
                          className="msg menu"
                          id="cellContextMenu"
                          onClose={[Function]}
                          onKeyDown={[Function]}
                          onOpen={[Function]}
                          orientation="column"
                          pinned={false}
                          placement="bottom-start"
                          showArrow={false}
                        >
                          <Portal
                            id="cellContextMenu"
                            onClose={[Function]}
                            onKeyDown={[Function]}
                            onOpen={[Function]}
                          />
                        </Popup>
                      </Menu>
                    </div>
                  </Container>
                </ResultView>
              </div>
            </Container>
          </div>
        </Container>
      </Tabview>
      <ResultStatus
        executionInfo={
          {
            "text": "All fine",
            "type": 4,
          }
        }
      >
        <Container
          className="msg resultStatus"
          orientation="row"
        >
          <div
            className="msg container fixedScrollbar resultStatus"
            style={
              {
                "alignItems": undefined,
                "flexDirection": "row",
                "flexWrap": undefined,
                "justifyContent": undefined,
              }
            }
          >
            <Label>
              <label
                className="msg label"
                data-tooltip="expand"
                style={{}}
              >
                All fine
              </label>
            </Label>
          </div>
        </Container>
      </ResultStatus>
      <Menu
        id="actionMenu"
        onItemClick={[Function]}
        orientation="column"
        placement="bottom-start"
      >
        <Popup
          className="msg menu"
          id="actionMenu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="bottom-start"
          showArrow={false}
        >
          <Portal
            id="actionMenu"
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </div>
  </Container>
</ResultTabView>
`;
